--- a/_posts/2015-02-24-fw1-3-0-released.markdown
+++ b/_posts/2015-02-24-fw1-3-0-released.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 3.0 Released!"
 date: 2015-02-24 10:30:49 -0700
 comments: true
-tags: [releases, fw1, di1]
+categories: [releases, fw1, di1]
 author: Sean Corfield
 ---
 I'm pleased to announce that after lots of user testing and almost no issues found, the Gold Release of [FW/1 3.0](https://github.com/framework-one/fw1/releases/tag/v3.0) is now available!<!-- more -->
