--- a/_posts/2015-09-06-fw1-news.markdown
+++ b/_posts/2015-09-06-fw1-news.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 New Releases etc"
 date: 2015-09-06 22:25
 comments: true
-tags: [releases, fw1, di1, aop1, clojure]
+categories: [releases, fw1, di1, aop1, clojure]
 author: Sean Corfield
 ---
 A couple of months have passed since [FW/1 3.1 was released](http://framework-one.github.io/blog/2015/07/12/fw1-3-1-released/) but things have been busy behind the scenes!
