--- a/_posts/2016-01-05-fw1-4-0-and-beyond.markdown
+++ b/_posts/2016-01-05-fw1-4-0-and-beyond.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 4.0 and Beyond"
 date: 2016-01-05 22:20
 comments: true
-tags: [releases, fw1, di1, aop1, clojure]
+categories: [releases, fw1, di1, aop1, clojure]
 author: Sean Corfield
 ---
 Happy New Year and Welcome to 2016!
