--- a/_posts/2016-03-05-fw1-4-0-0-alpha-1.markdown
+++ b/_posts/2016-03-05-fw1-4-0-0-alpha-1.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 4.0.0 Alpha 1"
 date: 2016-03-05 17:00
 comments: true
-tags: [releases, fw1, di1, aop1, clojure]
+categories: [releases, fw1, di1, aop1, clojure]
 author: Sean Corfield
 ---
 [FW/1 4.0.0 Alpha 1](https://github.com/framework-one/fw1/releases/tag/v4.0.0-alpha1) is available. At this point FW/1 4.0.0 is feature complete -- there may be a few very minor changes between now and the Beta, and then only bug fixes through the RC phase. We've been using this **develop** version in production at work all along so I consider it solid enough for serious work.<!-- more -->
