--- a/_posts/2016-07-12-fw1-4-0-0-beta-2.markdown
+++ b/_posts/2016-07-12-fw1-4-0-0-beta-2.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 4.0.0 Beta 2"
 date: 2016-07-12 12:35
 comments: true
-tags: [releases, fw1, di1, aop1, clojure]
+categories: [releases, fw1, di1, aop1, clojure]
 author: Sean Corfield
 ---
 [FW/1 4.0.0 Beta 2](https://github.com/framework-one/fw1/releases/tag/v4.0.0-beta2) is available.
