--- a/_posts/2017-07-01-fw1-4-1-0-released.markdown
+++ b/_posts/2017-07-01-fw1-4-1-0-released.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 4.1.0 Released!"
 date: 2017-07-01 20:00
 comments: true
-tags: [releases, fw1, di1, aop1]
+categories: [releases, fw1, di1, aop1]
 author: Sean Corfield
 ---
 [FW/1 4.1.0](https://github.com/framework-one/fw1/releases/tag/v4.1.0) has been released!
