--- a/_posts/2018-03-27-fw1-4-2-0-released.markdown
+++ b/_posts/2018-03-27-fw1-4-2-0-released.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 4.2.0 Released!"
 date: 2018-03-27 11:25
 comments: true
-tags: [releases, fw1, di1, aop1]
+categories: [releases, fw1, di1, aop1]
 author: Sean Corfield
 ---
 [FW/1 4.2.0](https://github.com/framework-one/fw1/releases/tag/v4.2.0) has been released!
